Implementation of booking functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,5 @@ spring.datasource.password=12345
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.jdbc.time_zone: UTC
 
-# ????? ????????
-#logging.level.org.hibernate.SQL=DEBUG
-# ????? ????????, ??????? ????????????? ? ????????? ????????
-#logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=trace
