--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -14,3 +14,4 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 hibernate.show_sql=true
 hibernate.jdbc.time_zone=UTC 
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
